[gd_scene load_steps=22 format=3 uid="uid://82yawaxjl0c7"]

[ext_resource type="Script" uid="uid://d31epwq3c4afl" path="res://scripts/player.gd" id="1_qlg0r"]
[ext_resource type="SpriteFrames" uid="uid://dj2yelar2cqlf" path="res://assets/old/player.tres" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://c3u0nxn17yu5q" path="res://scenes/components/velocity_component.tscn" id="2_qlg0r"]
[ext_resource type="PackedScene" uid="uid://mf1b6kvdn8bx" path="res://scenes/components/mediator_controller_component.tscn" id="3_tuyoq"]
[ext_resource type="Script" uid="uid://bv8admow0rxfu" path="res://scripts/components/animation_component.gd" id="4_qlg0r"]

[sub_resource type="Curve" id="Curve_qlg0r"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(0.52444446, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_dqkch"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1e-05, 0.7415731), 0.0, 0.0, 0, 0, Vector2(0.09333334, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(157, 201)

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "idle_right"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_g2els")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_right"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(2.2973971, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "walk_right"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_g2els")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk_right"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "walk_left"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_g2els")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk_left"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "idle_left"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_g2els")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_left"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smehm"]
_data = {
&"RESET": SubResource("Animation_qlg0r"),
&"idle_left": SubResource("Animation_smehm"),
&"idle_right": SubResource("Animation_dqkch"),
&"walk_left": SubResource("Animation_fjrip"),
&"walk_right": SubResource("Animation_tuyoq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qlg0r"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tuyoq"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fjrip"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_smehm"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_smehm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qlg0r")
blend_point_0/pos = -2.0
blend_point_1/node = SubResource("AnimationNodeAnimation_tuyoq")
blend_point_1/pos = 2.0
blend_point_2/node = SubResource("AnimationNodeAnimation_fjrip")
blend_point_2/pos = 1.0
blend_point_3/node = SubResource("AnimationNodeAnimation_smehm")
blend_point_3/pos = -1.0
min_space = -2.0
max_space = 2.0
snap = 0.02
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qlg0r"]
advance_mode = 2
advance_expression = "
"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d2wvv"]
states/Start/position = Vector2(303, 110)
states/walk/node = SubResource("AnimationNodeBlendSpace1D_smehm")
states/walk/position = Vector2(619, 110)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_qlg0r")]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("velocity_component", "mediator_controller_component", "animation_component")]
collision_layer = 2
script = ExtResource("1_qlg0r")
velocity_component = NodePath("VelocityComponent")
mediator_controller_component = NodePath("MediatorControllerComponent")
animation_component = NodePath("AnimationComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("2_qlg0r")]
decelerationSpeed = 6.0
acceleration_curve = SubResource("Curve_qlg0r")
fall_curve_default = SubResource("Curve_dqkch")

[node name="MediatorControllerComponent" parent="." instance=ExtResource("3_tuyoq")]

[node name="AnimationComponent" type="Node" parent="." node_paths=PackedStringArray("animation_tree")]
script = ExtResource("4_qlg0r")
animation_tree = NodePath("../AnimationTree")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(-26.5, 36.5)
shape = SubResource("RectangleShape2D_dqkch")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-18, 14)
sprite_frames = ExtResource("2_g2els")
animation = &"idle_left"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_smehm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_d2wvv")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/walk/blend_position = -1.9939302
